<resources>
    <string name="app_name">约餐</string>
    <string name="dialog_uploding">加载中</string>
    <string name="btn_sure">确定</string>

    <string name="login_name">账号</string>
    <string name="login_name_hint">请输入账号</string>
    <string name="register">密码</string>
    <string name="register_name_hint">请输入密码</string>
    <string name="login_forget">记住密码</string>
    <string name="login_forget_tip">忘记密码</string>
    <string name="login_register">还没有账号？现在注册</string>
    <string name="login_register_tip">立即登录》</string>
    <string name="login_register_success">恭喜您注册成功</string>

    <string name="fragment_page_hotpot">火锅</string>
    <string name="fragment_page_Vouchers">代金劵</string>
    <string name="fragment_page_Reservations">预定座位</string>
    <string name="fragment_page_takeout_food">外卖</string>
    <string name="fragment_page_Buffet">自助餐</string>
    <string name="fragment_page_cuisine">江浙菜</string>
    <string name="fragment_page_Snack">小吃快餐</string>
    <string name="fragment_page_Western_style_food">西餐</string>
    <string name="home_address_Positioning">定位中...</string>

    <string name="order_home">订单</string>
    <string name="goto_fight_alone">去拼单</string>
    <string name="goto_fight_alone_food">拼餐更优惠</string>

    <string name="me_discount">优惠处</string>
    <string name="me_address">收货地址</string>
    <string name="me_collection">我的收藏</string>
    <string name="me_read">小说</string>
    <string name="me_aline_video">在线视频</string>
    <string name="me_Community">社区</string>
    <string name="me_waterandelectricityfee">宿舍水电费</string>
    <string name="me_money_package">钱包</string>
    <string name="me_Discount">优惠</string>
    <string name="me_title">我的</string>
    
    <string name="persion_data">个人信息</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="login_phone_password">登录密码</string>
    <string name="common">通用</string>
    <string name="app_quite">退出登录</string>
    <string name="me_head_photo">相册选取</string>
    <string name="me_head_camera">拍照</string>

    <string name="me_Chinamobile">中国大陆手机号</string>
    <string name="me_newmobile">新手机号</string>

    <string name="me_oldmobile">旧手机号</string>
    <string name="me_bind_newmobile">请输入你要绑定的新手机号</string>
    <string name="register_getreyzm">获取验证码</string>
    <string name="register_reyzm">请输入验证码</string>
    <string name="register_yzm">验证码</string>

    <string name="me_change_password">修改您的登录密码</string>
    <string name="set_safe_trade_newpass">新密码</string>
    <string name="set_safe_trade_newpasssure">新密码确认</string>
    <string name="set_safe_trade_renewpass">请输入新密码</string>
    <string name="set_safe_trade_renewpasssure">请再次输入新密码</string>
    <string name="me_mobile">手机号</string>
    <string name="set_Oldpassword">旧密码</string>
    <string name="set_reOldpassword">请输入旧密码</string>

    <string name="host_">热门</string>
    <string name="Bread_Dessert">面包甜点</string>
    <string name="Northeastern_food">东北菜</string>
    <string name="Snack_snack">小吃快餐</string>
    <string name="Jiangsu_and_Zhejiang_cuisine">江浙菜</string>
    <string name="Sichuan">川菜</string>
    <string name="go_fight_alone">去拼单</string>
    <string name="_fight_alone">团</string>
    <string name="discount_text_tip">劵</string>
    <string name="reservation_Private_Room">包间</string>
    <string name="reservation_">订座</string>

    <string name="tag"> (X5内核功能演示)</string>
    <string name="tip">普通接入直接参考“APPApplication” “BrowserActivity” “X5WebView”中相关实现即可</string>
    <string-array name="index_titles">
        <item>浏览器demo</item>
        <item>全屏播放</item>
        <item>文件选择器</item>
    </string-array>
    
    
    <!--代金劵-->
    <string name="voucher_robbed">抢劵</string>

    <!--收货地址-->
    <string name="address_contact">联系人</string>
    <string name="address_contact_hint">请输入联系人</string>
    <string name="lads">女士</string>
    <string name="jie_t_man">男士</string>
    <string name="address_phone">电话</string>
    <string name="address_phone_hint">请输入电话</string>
    <string name="address_">地址</string>
    <string name="address_hint">请输入地址</string>
    <string name="address_men_num">门牌号</string>
    <string name="address_men_num_hint">例：6楼502室</string>
    <string name="address_type_home">家</string>
    <string name="address_type_com">公司</string>
    <string name="address_type_school">学校</string>


    <!--订单 界面-->
    <string name="order_dfk">待付款</string>
    <string name="order_dfh">待发货</string>
    <string name="order_dsh">待收货</string>
    <string name="order_dpj">待评价</string>

    <string name="order_me">我的订单</string>
    <string name="order_all">全部订单</string>
    <string name="order_no_three_month">近三个月无订单记录</string>
    <string name="order_three_month_ago">查看三个月以前的订单记录</string>
    <string name="order_collection">我的收藏</string>
    <string name="order_collection_no">暂时还没有收藏</string>

    <!--我的钱包-->

    <string name="me_wallet">我的余额</string>
    <string name="me_wallet_fh">￥</string>
    <string name="me_wallet_set_pay">支付设置</string>
    <string name="me_wallet_set_pay_zfb">支付宝支付</string>
    <string name="me_wallet_set_pay_bank">添加银行卡</string>

    <!--订单列表-->
    <string name="order_list_dfk">待付款</string>
    <string name="order_list_dfh">待发货</string>
    <string name="order_list_dsh">待收货</string>
    <string name="order_list_dpj">待评价</string>

    <!--dialog-->

    <string name="alone_meal">单独购买</string>
    <string name="alone_ping_can">拼餐购买</string>

</resources>
