<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/include_titile_back_common"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_10dp"
        android:paddingRight="@dimen/margin_10dp">
        <include
            layout="@layout/include_10_layout_linear"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/address_contact" />

            <EditText
                android:id="@+id/address_contact"
                style="@style/edit_login"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="@dimen/pad_48dp"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:hint="@string/address_contact_hint" />

        </LinearLayout>

        <include
            layout="@layout/include_1_layout_linear"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/text_lads"
                android:layout_width="@dimen/margin_80dp"
                android:layout_height="@dimen/pad_48dp"
                android:text="@string/lads"
                android:gravity="center"/>

            <TextView
                android:id="@+id/text_jtm"
                android:layout_width="@dimen/margin_80dp"
                android:layout_height="@dimen/pad_48dp"
                android:text="@string/jie_t_man"
                android:gravity="center"/>

        </LinearLayout>

        <include
            layout="@layout/include_1_layout_linear"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/address_phone" />

            <EditText
                android:id="@+id/address_phoneNum"
                style="@style/edit_login"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="@dimen/pad_48dp"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:hint="@string/address_phone_hint" />

        </LinearLayout>

        <include
            layout="@layout/include_1_layout_linear"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/address_" />

            <EditText
                style="@style/edit_login"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="@dimen/pad_48dp"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:hint="@string/address_hint" />

        </LinearLayout>

        <include
            layout="@layout/include_1_layout_linear"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/address_men_num" />

            <EditText
                android:id="@+id/address_door_num"
                style="@style/edit_login"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="@dimen/pad_48dp"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:hint="@string/address_men_num_hint" />

        </LinearLayout>

        <include
            layout="@layout/include_1_layout_linear"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/pad_48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/login_name" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="@dimen/margin_80dp"
                    android:layout_height="@dimen/pad_48dp"
                    android:text="@string/address_type_home"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/address_type"
                    android:layout_width="@dimen/margin_80dp"
                    android:layout_height="@dimen/pad_48dp"
                    android:text="@string/address_type_com"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/address_school"
                    android:layout_width="@dimen/margin_80dp"
                    android:layout_height="@dimen/pad_48dp"
                    android:text="@string/address_type_school"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>
        <include
            layout="@layout/include_1_layout_linear"/>

        <include
            layout="@layout/include_btn_common"/>


    </LinearLayout>

</LinearLayout>
