<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_near"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pad_48dp"
            android:text="@string/order_home"
            android:background="@color/WhiteSmoke"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_10dp"
            android:textSize="@dimen/text_size_16sp"/>

        <include
            layout="@layout/include_1_layout_linear"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_5dp"
            android:paddingBottom="@dimen/margin_5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/dfk"
                android:text="@string/order_dfk"
                android:drawablePadding="@dimen/margin_5dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/dfh"
                android:text="@string/order_dfh"
                android:drawablePadding="@dimen/margin_5dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/dsh"
                android:text="@string/order_dsh"
                android:drawablePadding="@dimen/margin_5dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/dpj"
                android:text="@string/order_dpj"
                android:drawablePadding="@dimen/margin_5dp"
                android:gravity="center"/>

        </LinearLayout>

        <include
            layout="@layout/include_1_layout_linear"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_30dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/margin_10dp"
                android:paddingLeft="@dimen/margin_10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/order_me"
                    android:textColor="@color/Black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_all"
                    android:textColor="@color/style_title"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/no_order"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_no_three_month"
                    android:paddingTop="@dimen/margin_15dp"
                    android:textColor="@color/text_base_color"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_three_month_ago"
                    android:textColor="@color/text_base_color"
                    android:paddingTop="@dimen/margin_5dp"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/include_10_layout_linear"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_10dp"
            android:paddingLeft="@dimen/margin_10dp"
            android:paddingRight="@dimen/margin_10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_collection"
                android:textColor="@color/Black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:text="@string/order_collection_no"
                android:textColor="@color/style_title"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
