<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white"
    android:fitsSystemWindows="true"
    >

    <include layout="@layout/include_titile_back_common"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" 
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:layout_centerInParent="true"
        android:text="@string/me_change_password" />
    </RelativeLayout>

    

     <View
        style="@style/Line_horizontal"/>
      <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <include layout="@layout/liner_layfour" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="0.25"
                            android:gravity="center_vertical"
                            android:text="@string/set_Oldpassword"
                            android:textSize="@dimen/text_size_14sp" />

                        <EditText
                            android:id="@+id/edt_password_old"
                            style="@style/Me_Bind_MoblieEdit"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:hint="@string/set_reOldpassword"
                            android:inputType="textPassword"
                            android:layout_weight="0.45"/>

                    </LinearLayout>
                </RelativeLayout>
   <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <include layout="@layout/liner_layfour" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="0.25"
                            android:gravity="center_vertical"
                            android:text="@string/set_safe_trade_newpass"
                            android:textSize="@dimen/text_size_14sp" />

                        <EditText
                            android:id="@+id/edt_password_new"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="0.45"
                            android:hint="@string/set_safe_trade_renewpass"
                            android:inputType="textPassword"
                            style="@style/Me_Bind_MoblieEdit"/>


                    </LinearLayout>
                </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/liner_layfour" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:text="@string/set_safe_trade_newpasssure"
                android:textSize="@dimen/text_size_14sp" />

            <EditText
                android:id="@+id/edt_password_new_re"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.45"
                android:hint="@string/set_safe_trade_renewpasssure"
                android:inputType="textPassword"
                style="@style/Me_Bind_MoblieEdit" />


        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/include_btn_common"/>
</LinearLayout>
