<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/home_time"
        android:layout_margin="@dimen/margin_10dp">

        <TextView
            android:id="@+id/purchase_tip"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/Black"
            android:gravity="center"/>

        <include
            layout="@layout/include_1_layout_linear"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_10dp">

            <TextView
                android:id="@+id/alone_purchase"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/margin_30dp"
                android:text="@string/alone_meal"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/Black"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/WhiteSmoke">

            </LinearLayout>

            <TextView
                android:id="@+id/meal_purchase"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/margin_30dp"
                android:text="@string/alone_ping_can"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/discount_color"
                android:gravity="center"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
