<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/include_titile_back_common"/>

        <include
            layout="@layout/include_10_layout_linear"/>

        <LinearLayout
            android:id="@+id/liner_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_10dp"
            android:paddingRight="@dimen/margin_10dp"
            android:paddingTop="@dimen/margin_10dp"
            android:paddingBottom="@dimen/margin_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_host"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/margin_30dp"
                    android:textSize="@dimen/text_size_14sp"
                    android:textColor="@color/Black"
                    android:text="@string/order_list_dfk"
                    android:gravity="center"
                    android:background="@drawable/border_red"
                    android:layout_margin="@dimen/margin_5dp"/>

                <TextView
                    android:id="@+id/text_bread"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/margin_30dp"
                    android:textSize="@dimen/text_size_14sp"
                    android:textColor="@color/Black"
                    android:text="@string/order_list_dfh"
                    android:gravity="center"
                    android:background="@drawable/home_time"
                    android:layout_margin="@dimen/margin_5dp"/>

                <TextView
                    android:id="@+id/text_northeastern"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/margin_30dp"
                    android:textSize="@dimen/text_size_14sp"
                    android:textColor="@color/Black"
                    android:text="@string/order_list_dsh"
                    android:gravity="center"
                    android:background="@drawable/home_time"
                    android:layout_margin="@dimen/margin_5dp"/>

                <TextView
                    android:id="@+id/text_snack"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/margin_30dp"
                    android:textSize="@dimen/text_size_14sp"
                    android:textColor="@color/Black"
                    android:text="@string/order_list_dpj"
                    android:gravity="center"
                    android:background="@drawable/home_time"
                    android:layout_margin="@dimen/margin_5dp"/>

            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

</LinearLayout>
